--- a/Linguagem.css
+++ b/Linguagem.css
@@ -1,1 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Notable&display=swap');
+header {
+    font-family: 'Krona One', sans-serif;
+}
