--- a/Linguagem.css
+++ b/Linguagem.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Notable&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
 header {
     font-family: 'Krona One', sans-serif;
+}
+section {
+    font-family: 'Arvo', serif;
+}
+footer {
+    font-family: 'Arvo', serif;
 }
