--- a/Linguagem.css
+++ b/Linguagem.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Notable&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 header {
     font-family: 'Krona One', sans-serif;
     font-size: 25pt;
@@ -65,6 +66,26 @@ h2.U {
 }
 iframe {
     border-radius: 5px;
+    box-shadow: 1.8px 1.8px 10px green;
+}
+div#Pro {
+    font-size: 35pt;
+    color: rgba(255, 255, 255, 0.918);
+    position: absolute;
+    top: 2570px;
+    left: -140px;
+    text-align: center;
+    background-image: url("Imagens\ do\ Projeto/raposa.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+    width: 2043px;
+    border-radius: 1px;
+}
+h2.Ap {
+    font-size: 80pt;
+    font-family: 'Kaushan Script', cursive;
+    color: rgb(179, 9, 9);
 }
 footer {
     font-family: 'Arvo', serif;
