--- a/Linguagem.css
+++ b/Linguagem.css
@@ -39,6 +39,10 @@ li {
     background-color: rgba(8, 10, 114, 0.788);
     border-radius: 10px;
 }
+li:hover {
+    background-color: rgba(255, 255, 0, 0.507);
+    transition: 0.4s;
+}
 h1 {
     position: absolute;
     top: 50px;
